tests/sources/invalid/generics/generic_call_errors.fire
// Generic type-argument lists without a following constructor/call.
copyable class Box<T> {
    T v;

    Box(T v) {
        this.v = v;
    }
}

T identity<T>(T x) {
    return x;
}

// Missing '(' after generic class type arguments
Box<int32> a = Box<int32>;  //~ ERROR FS-PARSE-0010 @26
//~^ ERROR FS-PARSE-0003 @16

// Missing '(' after generic function type arguments
int32 b = identity<int32>;  //~ ERROR FS-PARSE-0010 @26
//~^ ERROR FS-PARSE-0003 @11

// Non-type token inside a type argument list
Box<int32> c = Box<5>(1);  //~ ERROR FS-PARSE-0010 @20
//~^ ERROR FS-PARSE-0010 @20
//~^^ ERROR FS-PARSE-0003 @16

// Missing '>' to close a generic function call's type-argument list
int32 d = identity<int32(5);  //~ ERROR FS-PARSE-0010 @25
//~^ ERROR FS-PARSE-0010 @25
//~^^ ERROR FS-PARSE-0003 @11
